tests/regression/errors/basic/syntax_error_11.csd
// Syntax error test 11 - missing semicolon
sus x drip = 11
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
